--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#   REACT_APP_API_URL="http://localhost:5005"
-REACT_APP_API_URL="https://outstanding-gray-goldfish.cyclic.app"
+  REACT_APP_API_URL="http://localhost:5005"
+  #   REACT_APP_API_URL="https://outstanding-gray-goldfish.cyclic.app"
